	PR c++/11786 	* decl2.c (add_function): Do not complain about seeing the same 	non-function twice. 	* semantics.c (perform_koenig_lookup): Improve documentation.

PR c++/11786
	* g++.dg/lookup/koenig2.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@71213 138bc75d-0d04-0410-961f-82ee72b054a4